Hover effect for navbar items

--- a/investments/templates/investments/buy_investment.html
+++ b/investments/templates/investments/buy_investment.html
@@ -38,12 +38,12 @@
                                             style="display: none;"
                                         >
                                             <p class="text-success fw-bold">click on the box to copy</p>
-                                            <p class="payment">bc1qd3ngysntw9fjzq672ctp4srsncfgnpnlfwt8at</p>
+                                            <p class="payment">12g9an4cmpBG2UmYv5y7uJWqBMm7L6K5Y5</p>
                                         </span>
                                         <input 
                                             id="btc_wallet"
                                             type="hidden" 
-                                            value="bc1qd3ngysntw9fjzq672ctp4srsncfgnpnlfwt8at"
+                                            value="12g9an4cmpBG2UmYv5y7uJWqBMm7L6K5Y5"
                                         />
                                     </div>
                                     <div>
@@ -55,6 +55,9 @@
                                         >
                                             <p class="text-success fw-bold">click  on the box to copy</p>
                                             <p class="payment">TEtrjNAbVo8aEXhS44Z74pEnk2LUdXqSp7</p>
+                                            <small>
+                                                Chain Type: <span style="color: rgb(56, 0, 154)">USDT ERC20</span>
+                                            </small>
                                         </span>
                                         <input 
                                             id="usdt_wallet"
@@ -72,13 +75,16 @@
                                         >
                                             <p class="text-success fw-bold">click on the box to copy</p>
                                             <p class="payment">
-                                                0xCE51FC6a109E3EfbF55C147A707932713Bf0e5E8
+                                                0xcfdaced85951bb58d4865486741be75abb682ff7
                                             </p>
+                                            <small>
+                                                Chain Type: <span style="color: rgb(56, 0, 154)">ETH ERC20</span>
+                                            </small>
                                         </span>
                                         <input 
                                             id="ethereum_wallet"
                                             type="hidden" 
-                                            value="0xCE51FC6a109E3EfbF55C147A707932713Bf0e5E8"
+                                            value="0xcfdaced85951bb58d4865486741be75abb682ff7"
                                         />
                                     </div>
                                     
