--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -142,6 +142,7 @@
             <a 
               class="btn btn-outline-light py-3 m-2" 
               href="{% url 'account_login' %}" 
+              target="_blank"
               style="font-size: small; font-weight: 600; width: 8em;"
             >
               Sign In
@@ -150,6 +151,7 @@
             <a 
               class="btn btn-light py-3 my-2"
               href="{% url 'account_signup' %}" 
+              target="_blank"
               style="font-size: small; font-weight: 600; width: 12em;"
             >
               Get Started For Free
