added a basic translator

--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load google_translate %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -126,6 +127,11 @@
           </ul>  
 
           <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                  <span style="height: 20px !important;">{% google_translate %}</span>
+              </a>
+            </li>
             {% if request.user.is_authenticated and request.user.is_staff %}
             <li class="nav-item">
               <a class="btn btn-success" href="{% url 'admindashboard' %}">
