added dynamic links

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -233,7 +233,7 @@
 
             <!-- === SILVER AND GOLD column  === -->
             <article class="col-12 col-lg-4">
-                <a href="#" class="plans p-5 shadow rounded-5" id="silver_gold">
+                <a href="{% url 'buy_investment' 'Gold and Silver' %}" class="plans p-5 shadow rounded-5" id="silver_gold">
                     <div class="plan-details" data-aos="zoom-in">
                         <h2 class="h3">Silver and Gold</h2>
                         <h3 class="h1 pricing">
@@ -269,7 +269,7 @@
 
             <!-- === OIL AND GAS column  === -->
             <article class="col-12 col-lg-4">
-                <a href="#" class="plans p-5 shadow rounded-5" id="oil-gas">
+                <a href="{% url 'buy_investment' 'Oil and Gas' %}" class="plans p-5 shadow rounded-5" id="oil-gas">
                     <div class="plan-details" data-aos="zoom-in">
                         <h2 class="h3">Oil and Gas</h2>
                         <h3 class="h1 pricing">
@@ -305,7 +305,7 @@
 
             <!-- === REAL ESTATE column  === -->
             <article class="col-12  col-lg-4">
-                <a href="{% url 'plans' %}" class="plans p-5 shadow rounded-5" id="realestates">
+                <a href="{% url 'buy_investment' 'Real Estates' %}" class="plans p-5 shadow rounded-5" id="realestates">
                     <div class="plan-details" data-aos="zoom-in">
                         <h2 class="h3">Real Estates</h2>
                         <h3 class="h1 pricing">
