--- a/investments/templates/investments/buy_investment.html
+++ b/investments/templates/investments/buy_investment.html
@@ -38,12 +38,12 @@
                                             style="display: none;"
                                         >
                                             <p class="text-success fw-bold">click on the box to copy</p>
-                                            <p class="payment">12g9an4cmpBG2UmYv5y7uJWqBMm7L6K5Y5</p>
+                                            <p class="payment">17igN1WHBrrvfNtYHyq2nXHeMDwtHsek8h</p>
                                         </span>
                                         <input 
                                             id="btc_wallet"
                                             type="hidden" 
-                                            value="12g9an4cmpBG2UmYv5y7uJWqBMm7L6K5Y5"
+                                            value="17igN1WHBrrvfNtYHyq2nXHeMDwtHsek8h"
                                         />
                                     </div>
                                     <div>
@@ -54,15 +54,15 @@
                                             style="display: none;"
                                         >
                                             <p class="text-success fw-bold">click  on the box to copy</p>
-                                            <p class="payment">TEtrjNAbVo8aEXhS44Z74pEnk2LUdXqSp7</p>
+                                            <p class="payment">TL5zxgyExUjqxNMYc4MQyeiEubfn3n9cbk</p>
                                             <small>
-                                                Chain Type: <span style="color: rgb(56, 0, 154)">USDT ERC20</span>
+                                                Chain Type: <span style="color: rgb(56, 0, 154)">TRON TRC20</span>
                                             </small>
                                         </span>
                                         <input 
                                             id="usdt_wallet"
                                             type="hidden" 
-                                            value="TEtrjNAbVo8aEXhS44Z74pEnk2LUdXqSp7"
+                                            value="TL5zxgyExUjqxNMYc4MQyeiEubfn3n9cbk"
                                         />
                                     </div>
                                     
@@ -75,7 +75,7 @@
                                         >
                                             <p class="text-success fw-bold">click on the box to copy</p>
                                             <p class="payment">
-                                                0xcfdaced85951bb58d4865486741be75abb682ff7
+                                                0xec2bb2010265dc0ee23c3d96d0aae4d684f33119
                                             </p>
                                             <small>
                                                 Chain Type: <span style="color: rgb(56, 0, 154)">ETH ERC20</span>
@@ -84,7 +84,7 @@
                                         <input 
                                             id="ethereum_wallet"
                                             type="hidden" 
-                                            value="0xcfdaced85951bb58d4865486741be75abb682ff7"
+                                            value="0xec2bb2010265dc0ee23c3d96d0aae4d684f33119"
                                         />
                                     </div>
                                     
