--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -24,7 +24,7 @@
               <button class="btn btn-1 fw-bolder btn-lg col-12 primaryAction" type="submit">{% trans "Sign In" %}</button>
             </div>
             <div class="text-white d-flex justify-content-center">
-              <span class="pe-2">{% trans "Don't have an Account" %}</span>
+              <span class="pe-2 text-dark">{% trans "Don't have an Account" %}</span>
               <a class="text-primary fw-bolder secondaryAction d-flex" href="{% url 'account_signup' %}">
                 {% trans "Sign up" %}
               </a>
