--- a/accounts/templates/account/email_confirm.html
+++ b/accounts/templates/account/email_confirm.html
@@ -17,7 +17,11 @@
 
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
+    <button 
+        class="btn btn-1 btn-lg col-12  shadow" 
+        type="submit">
+            {% trans 'Confirm' %}
+        </button>
 </form>
 
 {% else %}
