--- a/accounts/templates/account/base.html
+++ b/accounts/templates/account/base.html
@@ -94,7 +94,7 @@
           >
         </a>
         
-        <div class="p-4 flex-grow-1">
+        <div class="p-4 p-4 flex-grow-1 w-100 d-flex justify-content-center">
           {% block content %}
         
           {% endblock content %}
