changed the start from and fix route for real estate

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -238,7 +238,7 @@
                         <h2 class="h3">Silver and Gold</h2>
                         <h3 class="h1 pricing">
                             <small>from</small>
-                            <sup>$</sup>5000
+                            <sup>$</sup>500
                         </h3>
                         <div class="d-flex mt-4">
                             <i class="bi bi-check-all"></i>
@@ -274,7 +274,7 @@
                         <h2 class="h3">Oil and Gas</h2>
                         <h3 class="h1 pricing">
                             <small>from</small>
-                            <sup>$</sup>5000
+                            <sup>$</sup>500
                         </h3>
                         <div class="d-flex mt-4">
                             <i class="bi bi-check-all"></i>
@@ -305,12 +305,12 @@
 
             <!-- === REAL ESTATE column  === -->
             <article class="col-12  col-lg-4">
-                <a href="{% url 'buy_investment' 'Real Estates' %}" class="plans p-5 shadow rounded-5" id="realestates">
+                <a href="{% url 'buy_investment' 'Real Estate' %}" class="plans p-5 shadow rounded-5" id="realestates">
                     <div class="plan-details" data-aos="zoom-in">
                         <h2 class="h3">Real Estates</h2>
                         <h3 class="h1 pricing">
                             <small>from</small>
-                            <sup>$</sup>5000
+                            <sup>$</sup>1000
                         </h3>
                         <div class="d-flex mt-4">
                             <i class="bi bi-check-all"></i>
