--- a/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
@@ -1,9 +1,20 @@
 {% load static %}
+{% load crispy_forms_tags %} 
 <section>
     <div class="container">
-        <section class="row gy-5 py-4">
-            <div class="col-12">
+        <section class="row gy-5 py-4 align-items-center">
+            <div class="col-6">
                 <h3>Admin / Withdrawals</h3>
+            </div>
+
+            <div class="col-6 text-end">
+                <button 
+                    class="btn btn-primary btn-lg"
+                    data-bs-toggle="modal"
+                    data-bs-target="#createWithdrawalModal"
+                >
+                    Create Withdrawal
+                </button>
             </div>
         </section>
 
@@ -232,3 +243,37 @@
     </div>
   </div>
   
+
+<!-- Create Withdrawal Modal -->
+<div class="modal fade" id="createWithdrawalModal" tabindex="-1" aria-labelledby="createWithdrawalModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <h5 class="modal-title" id="createWithdrawalModalLabel">Create Withdrawal</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+
+      <form method="post" action="{% url 'admin_create_withdrawal' %}">
+        {% csrf_token %}
+
+        <div class="modal-body">
+          <div class="row gy-3">
+              {{ admin_withdrawal_form|crispy }}
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Cancel
+          </button>
+          <button type="submit" class="btn btn-success">
+            Create & Approve
+          </button>
+        </div>
+
+      </form>
+
+    </div>
+  </div>
+</div>
