button to perform this withdrawal actions from the admin portal

--- a/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
@@ -260,6 +260,15 @@
         <div class="modal-body">
           <div class="row gy-3">
               {{ admin_withdrawal_form|crispy }}
+
+              <div class="mt-2">
+                <small class="text-muted d-block">
+                    User Total Profit: $<span id="userTotalProfit">0.00</span>
+                </small>
+                <small class="text-muted d-block">
+                    User Accumulated Profit: $<span id="userAccumulatedProfit">0.00</span>
+                </small>
+             </div>
           </div>
         </div>
 
