include bonuses in modal

--- a/admin_portal/templates/admin_portal/investments_admin_tab.html
+++ b/admin_portal/templates/admin_portal/investments_admin_tab.html
@@ -286,6 +286,20 @@
                             </tr>
 
                             <tr>
+                                <td><p>Package Bonus %</p></td>
+                                <td>
+                                    <p class="fw-bold text-end" id="modal-bonus-percentage"></p>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td><p>Package Bonus Amount</p></td>
+                                <td>
+                                    <p class="fw-bold text-end" id="modal-bonus-amount"></p>
+                                </td>
+                            </tr>
+
+                            <tr>
                                 <td><p> Daily Profit</p></td>
                                 <td>
                                     <p class="fw-bold text-end" id="modal-daily-profit"></p>
