added an id for deactivating button

--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -7,7 +7,7 @@
 {% block content %}
   <!-- Section: Log In -->
   <article class="col-lg-8 mx-auto">
-        <form class="login p-2 p-md-5" method="POST" action="{% url 'account_login' %}">
+        <form id="login_form" class="login p-2 p-md-5" method="POST" action="{% url 'account_login' %}">
           <div>
             <h1 class="h2 fw-bold text-center">{% trans "Welcome Back" %}</h1>
             <p class="text-center text-muted">{% trans "Login again to start building your dollars portfolio." %}</p>
